--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/async": "^3.2.24",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.0.0",
+    "async": "^3.2.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
+    "lodash": "^4.17.21",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.17.0"
   }
